--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,9 @@
 CHANGELOG MASHSHARE
 
 = 2.1.3 = 
-New: Use Mashshare for categories and non singular blogposts 
+New: Use Mashshare on categories and non singular blogposts 
 New: Use dynamic jQuery tabs in settings backend
-New: Use https://github.com/jjenzz/jQuery.nearest to separate opening of different subscribe toggle windows
-New: Spanish translation by Nestor Pool
+New: Differentiate between multiple subscribe buttons and opens only one toggle window - Not all any longer!New: Spanish translation by Nestor Pool
 Fix: Missing JS in mashsb-admin.js
 Fix: Fix height of Whatsapp button
 Fix: Rewrite Purge DB Cache function to delete post_meta objects
